--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
-﻿name: CuaHangUI
+name: CuaHangUI
 main: phuongaz\CuaHangUI\Main
 author: phuongaz | Moded by LamPocketVN
 api: 3.9.0
-version: 0.0.3
+version: 0.0.4 beta
 depend: 
 - FormAPI
 - PointAPI
